# rust-crate-recommender

./: .env  Cargo.toml  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
src/: main.rs  models.rs  scorer.rs  services.rs
