[package]
name = "rust-crate-recommender"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.17"
tower-http = { version = "0.5", features = ["cors"] }
env_logger = "0.11"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
http = "1.0" 